crates/tsuno-driver/tests/fixtures/snapshots/fail/rejects_resource_contract_on_safe_fn.rs
fn safe_with_resource_contract(p: *mut i32)
//@ resource req *p |-> Option::Some(0i32);
{
    let _keep = p;
}

fn main() {}
